# daily-dosu

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.txt
include/: Bot.h  BotConfigDatabaseManager.h  DailyJob.h  DosuConfig.h  EmbedGenerator.h  GetTopPlays.h  Logger.h  OsuWrapper.h  OsutrackWrapper.h  RankingsDatabaseManager.h  ScrapePlayers.h  ScrapeRankings.h  ServerConfig.h  ThreadPool.h  TokenManager.h  TopPlaysDatabaseManager.h  Util.h
include/bot/: Bot.h  EmbedGenerator.h
include/database/: BotConfigDatabase.h  RankingsDatabase.h  TopPlaysDatabase.h
include/http/: HttpRequester.h  OsuWrapper.h  OsutrackWrapper.h  TokenManager.h
include/job/: GetTopPlays.h  ScrapeRankings.h
src/: Bot.cpp  BotConfigDatabaseManager.cpp  DailyJob.cpp  DosuConfig.cpp  EmbedGenerator.cpp  GetTopPlays.cpp  OsuWrapper.cpp  OsutrackWrapper.cpp  RankingsDatabaseManager.cpp  ScrapePlayers.cpp  ScrapeRankings.cpp  ServerConfig.cpp  TokenManager.cpp  TopPlaysDatabaseManager.cpp  main.cpp
src/bot/: Bot.cpp  EmbedGenerator.cpp
src/database/: BotConfigDatabase.cpp  RankingsDatabase.cpp  TopPlaysDatabase.cpp
src/http/: HttpRequester.cpp  OsuWrapper.cpp  OsutrackWrapper.cpp  TokenManager.cpp
src/job/: GetTopPlays.cpp  ScrapeRankings.cpp
